--- a/assets/style.css
+++ b/assets/style.css
@@ -37,6 +37,6 @@ p {
   .card {
     width: 80%;
     margin: 40px auto;
-    border: 5px solid gray;
-    box-shadow: 5px 10px #888888;
+    border: 5px solid rgb(0, 10, 155);
+    box-shadow: 5px 10px #014d6b;
   }
